--- a/style.css
+++ b/style.css
@@ -5,5 +5,21 @@
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
-  background: black;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  height: 100vh;
+  background: rgb(24, 24, 24);
+}
+
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  outline: none;
 }
